Part4_Kubernetes/Chapter08/Ch08_09-cert-manager-test/k8s-manifests/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-challenge-type: "http01"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "a01e4f8ac400949928c333b8f2f3d55c-1974779444.ap-northeast-2.elb.amazonaws.com"
    secretName: "ingress-2048"
  rules:
  - host: "a01e4f8ac400949928c333b8f2f3d55c-1974779444.ap-northeast-2.elb.amazonaws.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 80
